--- a/haruhi.css
+++ b/haruhi.css
@@ -5,6 +5,14 @@
     border: 5px solid;
     padding: 20px;
 }
+
+@media only screen and (max-device-width : 480px) {
+/* スマートフォンだけ以下を適用 */
+  	
+div.imgt {
+    width:100%;
+    }
+}
     
 .p.title {
     font-family: 'Arial Black','ヒラギノ角ゴシック','Hiragino Sans','メイリオ', Meiryo,'ヒラギノ角ゴ StdN','Hiragino Kaku Gothic StdN',sans-serif;
