--- a/haruhi.css
+++ b/haruhi.css
@@ -11,6 +11,7 @@
         width:100%;
         max-width:100%;
         height:auto;
+        right:15%
     }
 }
     
@@ -20,14 +21,14 @@
     font-size:5em;
     line-height:90%;
     margin: 0 auto 0 auto;
-    }
+}
 
 @media (max-width : 670px){
     p.title {
         width:100%;
         max-width:100%;
         height:auto;
-    }
+        right:15%
 }
 
 /** ボタン **/
