--- a/haruhi.css
+++ b/haruhi.css
@@ -30,6 +30,7 @@
         height:auto;
         margin-right:auto;
         margin-left:auto;
+        text-align:center;
      }
 }
 
@@ -64,6 +65,7 @@
         height:auto;
         margin-right:auto;
         margin-left:auto;
+        text-align:center;
      }
 }
 
