--- a/haruhi.css
+++ b/haruhi.css
@@ -63,9 +63,8 @@
     .disp-box label {
         width:100%;
         height:auto;
-        margin-right:auto;
-        margin-left:auto;
         text-align:center;
+        float:left;
      }
 }
 
@@ -124,8 +123,7 @@
     .disp-box2 label {
         width:100%;
         height:auto;
-        margin-right:auto;
-        margin-left:auto;
+        float:right;
      }
 }
 
