--- a/haruhi.css
+++ b/haruhi.css
@@ -4,6 +4,7 @@
     left:8em;
     border: 5px solid;
     padding: 20px;
+    overflow:hidden;
 }
 
 @media (max-width : 479px){
@@ -22,6 +23,7 @@
     font-size:5em;
     line-height:90%;
     margin: 0 auto 0 auto;
+    overflow:hidden;
 }
 
 @media (max-width : 479px){
